# FiducialRegistrationTest

./: CMakeLists.txt  LICENSE  README.md
ConsoleTest/: FiducialRegistrationConsoleTest.py  plotResult.R
FiducialImageMaker/: CMakeLists.txt  FiducialImageMaker.cxx  FiducialImageMaker.xml  itkRenderSpatialObjectImageFilter.h  itkRenderSpatialObjectImageFilter.txx
FiducialRegistrationTest/: CMakeLists.txt  FiducialRegistrationTest.py
TargetRegistrationError/: CMakeLists.txt  TargetRegistrationError.py
